# qctb

./: .gitignore  Cargo.toml  README.md  build-release.sh
docs/: active_context.md  api.md  design.md  requirements.md
src/: lib.rs  main.rs
src/qc_summary/: aggregator.rs  config.rs  excel.rs  mod.rs
src/qc_summary/parsers/: bismark.rs  fqc.rs  methrix.rs  mod.rs  qualimap.rs  seqkit.rs  trim_galore.rs
testdata/GCbias/0531LPHSC70220_human/: gc_bias_metrics(1).txt  summary_metrics.txt
testdata/bismark/: 0531LPHSC70203_val_1_bismark_bt2_PE_report.txt  0531LPHSC70203_val_1_bismark_bt2_pe.nucleotide_stats.txt
testdata/fastqc_clean/F6703_372760_val_1_fastqc/: fastqc.fo  fastqc_data.txt  fastqc_report.html  summary.txt
testdata/fastqc_clean/F6703_372760_val_2_fastqc/: fastqc.fo  fastqc_data.txt  fastqc_report.html  summary.txt
testdata/fastqc_raw/F6703_372760_R1_fastqc/: fastqc.fo  fastqc_data.txt  fastqc_report.html  summary.txt
testdata/fastqc_raw/F6703_372760_R2_fastqc/: fastqc.fo  fastqc_data.txt  fastqc_report.html  summary.txt
testdata/fqc_clean/F6703_372760_val_1_fqc/: fastqc_data.txt
testdata/fqc_clean/F6703_372760_val_2_fqc/: fastqc_data.txt
testdata/fqc_raw/F6703_372760_R1_fqc/: fastqc_data.txt
testdata/fqc_raw/F6703_372760_R2_fqc/: fastqc_data.txt
testdata/qualimap/F6703_372760_human/: genome_results.txt  (+1 more)
testdata/seqkit/: F6703_372760_seqkit_stat.txt
testdata/star/: F6703_372760Log.final.out  F6703_372760Log.out
testdata/trim/: F6703_372760_R1.fastq.gz_trimming_report.txt  F6703_372760_R2.fastq.gz_trimming_report.txt
(+14 files in other folders)
