[package]
name = "qctb"
version = "0.1.0"
edition = "2021"
description = "QC tools for bioinformatics - Fast QC summary reporting"
authors = ["xdxtools team"]
license = "MIT"
repository = "https://github.com/xdxtools/qctb"
readme = "README.md"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Excel output
rust_xlsxwriter = "0.57"

# Performance
rayon = "1.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for text parsing
regex = "1.10"

# Excel input parsing
calamine = "0.24"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
